# altspell-plugins

./: pyproject.toml
