[project]
name = "altspell-plugins"
version = "0.1.0"
description = "Plugin interface for Altspell."
readme = "README.md"
requires-python = ">=3.8,<4"
authors = [
  { name="Nicholas Johnson", email="njohnson@posteo.net" },
]
classifiers = [
  "Private :: Do Not Upload",
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python",
  "License-Expression :: GPL-3.0-or-later",
  "Operating System :: OS Independent",
]
dependencies = []

[build-system]
requires = ["flit_core>=3.11,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "altspell_plugins"
